--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,3 +60,7 @@ regex = "1"
 # external fuzzing-based abi decompiler
 retry = "2.0.0"
 serde_cbor = "0.11.2"
+
+[dependencies.felt]
+path = "./lib/cairo-vm/felt/"
+package = 'cairo-felt'
