adding the runner

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,3 +64,7 @@ serde_cbor = "0.11.2"
 [dependencies.felt]
 path = "./lib/cairo-vm/felt/"
 package = 'cairo-felt'
+
+[dependencies.cairo-rs]
+path = "./lib/cairo-vm/vm/"
+package = 'cairo-vm'
